--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -33,6 +33,8 @@
                              
                             </p>
                         </div>
+                        <p id="wind">Wind Speed</p>
+                        <p id="humidity">Humidity</p>
                     </div>
                 </div>
             </div>
