--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -33,8 +33,10 @@
                              
                             </p>
                         </div>
-                        <p id="wind">Wind Speed</p>
+                      <div class="bottomlayer data-hide tex-white">
+                            <p id="wind">Wind Speed</p>
                         <p id="humidity">Humidity</p>
+                      </div>
                     </div>
                 </div>
             </div>
